chore: apply code formatting and fix deprecated Panama API usage
Apply Spotless formatting to improve code consistency and fix deprecated Panama FFI API usage:

Changes:
- Replace deprecated getUtf8String() with getString(offset, StandardCharsets.UTF_8) in PanamaWasiDescriptor
- Apply Spotless formatting to split long method calls across multiple lines
- Format Javadoc comments for improved readability
- Add wasmtime4j-native/jni-headers/ to .gitignore (generated files)

Files affected:
- .gitignore: Add JNI header directory
- JniCaller.java: Formatting
- JniWasiInputStream.java: Formatting
- JniWasiOutputStream.java: Formatting
- JniCallerContextTest.java: Formatting
- PanamaHostFunction.java: Javadoc formatting
- PanamaWasiDescriptor.java: Fix deprecated API + formatting
- PanamaCallerContextTest.java: Formatting
- PanamaHostFunctionTest.java: Formatting

No functional changes - only code formatting and API deprecation fixes.